--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,7 @@
 MAILGUN_URL=
 MAILGUN_KEY=
 ADMIN_EMAIL=
+JUDGE_APIKEY=
 
 SQLALCHEMY_DATABASE_URI=mysql://root:password@db/openctf
 MYSQL_ROOT_PASSWORD=password
