--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,5 +1,6 @@
 upstream web {
     least_conn;
+    ip_hash;
     {{range service "platform.openctf"}}server {{.Address}}:{{.Port}} max_fails=3 fail_timeout=60 weight=1;
     {{else}}server 127.0.0.1:65535;
     {{end}}
