--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,6 +14,7 @@
             ],
             "env": {
                 "DATABASE_URL": "mysql://root:@localhost/openctf_debug",
+                "FILESTORE_STATIC_HOST": "http://localhost:7910",
                 "FILESTORE_URL": "http://localhost:7910",
                 "OPENCTF_PORT": "8000",
                 "CACHE_REDIS_URL": "redis://localhost:6379/cache",
