--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,6 +45,7 @@
     "webpack-merge": "^4.1.0"
   },
   "dependencies": {
+    "bulma": "^0.5.0",
     "vue": "^2.4.2",
     "vue-router": "^2.7.0"
   }
