--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "description": "Open-source CTF framework.",
   "scripts": {
-    "build": ""
+    "build": "webpack && go generate && go build"
   },
   "repository": {
     "type": "git",
@@ -16,12 +16,11 @@
   },
   "homepage": "https://github.com/easyctf/openctf#readme",
   "devDependencies": {
-    "gulp": "^3.9.1",
-    "gulp-svelte": "^0.4.0",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.8.3",
     "sass-loader": "^7.0.1",
     "svelte-loader": "^2.8.1",
-    "webpack": "^4.6.0"
+    "webpack": "^4.6.0",
+    "webpack-cli": "^2.0.14"
   }
 }
