--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
   },
   "homepage": "https://github.com/easyctf/openctf#readme",
   "devDependencies": {
+    "css-loader": "^0.28.11",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.8.3",
     "sass-loader": "^7.0.1",
+    "style-loader": "^0.21.0",
     "svelte-loader": "^2.8.1",
     "webpack": "^4.6.0",
     "webpack-cli": "^2.0.14"
