--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
 language: generic
+cache:
+  directories:
+    - node_modules
 before_script:
   - npm install
   - go get -u github.com/jteeuwen/go-bindata/...
