--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "openctf",
   "version": "0.1.0",
   "description": "Open-source CTF framework.",
+  "sideEffects": false,
   "scripts": {
-    "build": "webpack && go generate && go build"
+    "build": "NODE_ENV=development rm -f public/* && webpack && go generate && go build"
   },
   "repository": {
     "type": "git",
@@ -16,12 +17,18 @@
   },
   "homepage": "https://github.com/easyctf/openctf#readme",
   "devDependencies": {
+    "bootstrap": "^4.1.0",
+    "bootstrap-sass": "^3.3.7",
     "css-loader": "^0.28.11",
     "html-webpack-plugin": "^3.2.0",
+    "jquery": "^3.3.1",
+    "mini-css-extract-plugin": "^0.4.0",
     "node-sass": "^4.8.3",
+    "popper.js": "^1.14.3",
     "sass-loader": "^7.0.1",
     "style-loader": "^0.21.0",
-    "svelte-loader": "^2.8.1",
+    "svelte": "^1.59.0",
+    "svelte-loader": "2.5.1",
     "webpack": "^4.6.0",
     "webpack-cli": "^2.0.14"
   }
