--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,10 @@ cache:
     - node_modules
 before_script:
   - npm install
-  - go get -v
   - go get -u github.com/jteeuwen/go-bindata/...
-  
+  - go generate -v
+
+  - go get -v
   - npm run build
 notifications:
   email: false
