--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_script:
   - go get -u github.com/jteeuwen/go-bindata/...
   - go generate -v
 
-  - go get -tv ./...
+  - go get -t -v ./...
   - npm run build
 notifications:
   email: false
