--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Open-source CTF framework.",
   "sideEffects": false,
   "scripts": {
-    "build": "rm -f public/* && webpack && go generate && go build"
+    "build": "rm -f generated/* && webpack --config webpack.config.build.js && go generate && go build",
+    "dev:api": "go generate && go build && ./openctf web --bind ':2601' --no-frontend",
+    "dev:static": "webpack-dev-server --config webpack.config.dev.js --color"
   },
   "repository": {
     "type": "git",
@@ -30,7 +32,8 @@
     "svelte": "^1.59.0",
     "svelte-loader": "2.5.1",
     "webpack": "^4.6.0",
-    "webpack-cli": "^2.0.14"
+    "webpack-cli": "^2.0.14",
+    "webpack-dev-server": "^3.1.3"
   },
   "dependencies": {
     "svelte-router": "^1.8.1"
