--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,6 +14,7 @@ install:
   - go version
   - go env
   - go get -u github.com/jteeuwen/go-bindata/...
+  - go get -v
 
 build_script:
   - go generate -v ./...
