--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,9 @@
 platform: x64
+version: "{build}"
 
 clone_folder: c:\gopath\src\github.com\easyctf\openctf
+environment:
+  GOPATH: c:\gopath
 
 image:
   - Visual Studio 2017
